NLP TP's/texts/robotics/robotics.stackexchange_0000083152.txt
Q:

"brics_actuator" for ROS Kinetic

Hi,
I am trying to use a package Youbot Simulation. The problem is that it asks me for brics_actuator. I have tried using this link and this link.
I shall be very thankful to you if someone could give me some clue to help me resolve this.
I am using ROS Kinetic.
Thank You in advanced.
=========== Edit 1 ==============
After using this link, I got the following error,
    In file included from /opt/ros/kinetic/include/moveit/macros/class_forward.h:40:0,
                 from /opt/ros/kinetic/include/moveit/kinematics_base/kinematics_base.h:42,
                 from /home/khan/catkin_ws/src/youbot-manipulation/youbot_arm_kinematics_moveit/ros/include/youbot_arm_kinematics_moveit/youbot_arm_kinematics_moveit.h:6,
                 from /home/khan/catkin_ws/src/youbot-manipulation/youbot_arm_kinematics_moveit/ros/src/youbot_arm_kinematics_moveit.cpp:1:
/opt/ros/kinetic/include/moveit/macros/declare_ptr.h:52:16: error: ‘shared_ptr’ in namespace ‘std’ does not name a template type
   typedef std::shared_ptr<Type> Name##Ptr;                                                                             \
                ^
/opt/ros/kinetic/include/moveit/macros/class_forward.h:51:3: note: in expansion of macro ‘MOVEIT_DECLARE_PTR’
   MOVEIT_DECLARE_PTR(C, C);
   ^
/opt/ros/kinetic/include/moveit/kinematics_base/kinematics_base.h:137:1: note: in expansion of macro ‘MOVEIT_CLASS_FORWARD’
 MOVEIT_CLASS_FORWARD(KinematicsBase);
 ^
/opt/ros/kinetic/include/moveit/macros/declare_ptr.h:53:16: error: ‘shared_ptr’ in namespace ‘std’ does not name a template type
   typedef std::shared_ptr<const Type> Name##ConstPtr;
                ^
/opt/ros/kinetic/include/moveit/macros/class_forward.h:51:3: note: in expansion of macro ‘MOVEIT_DECLARE_PTR’
   MOVEIT_DECLARE_PTR(C, C);
   ^
/opt/ros/kinetic/include/moveit/kinematics_base/kinematics_base.h:137:1: note: in expansion of macro ‘MOVEIT_CLASS_FORWARD’
 MOVEIT_CLASS_FORWARD(KinematicsBase);
 ^
youbot-manipulation/youbot_arm_kinematics_moveit/CMakeFiles/youbot_arm_kinematics_moveit.dir/build.make:62: recipe for target 'youbot-manipulation/youbot_arm_kinematics_moveit/CMakeFiles/youbot_arm_kinematics_moveit.dir/ros/src/youbot_arm_kinematics_moveit.cpp.o' failed

I believe that I have to enable C++11. Could you please tell me how did you do it? I think the error which I was receiving previously has been removed.

Originally posted by Abdul Mannan on ROS Answers with karma: 167 on 2017-10-04
Post score: 0

A:

You likely just need to clone this repo into your workspace's src directory and then run catkin_make to properly build the messages required by your package.

Originally posted by jarvisschultz with karma: 9031 on 2017-10-04
This answer was ACCEPTED on the original site
Post score: 1

Original comments
Comment by Abdul Mannan on 2017-10-05:
I have tried but it does not work.
Comment by jarvisschultz on 2017-10-05:
Could you possibly edit your question to explain how or why it does not work?
Comment by jarvisschultz on 2017-10-05:
I just tested and I was able to compile a workspace that contained only the youbot_simulation package you linked and the brics_actuator package I linked on Kinetic. The only change I needed to make was enabling C++11 for the youbot_arm_kinematics_moveit package.
Comment by Abdul Mannan on 2017-10-05:
I believe that I have to enable C++11. Could you please tell me how did you do it? I think the error which I was receiving previously has been removed.
Comment by jarvisschultz on 2017-10-06:
This is probably not the best CMake-y way to do this, but I just added SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11") to the CMakeLists.txt in the youbot_arm_kinematics_moveit directory.

